--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
+    "next-sanity": "^7.1.4",
     "query-string": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.28.0",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
